tests/snapshots/split_match__split_match_both_parts.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo:qux                                                                       "
"  baz:qux                                                                       "
"> foo:bar                                                                       "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (2, 23)
