tests/snapshots/split_match__split_match_both_parts@001.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"baz:qux\", \"foo:qux\"]\noptions: --split-match :"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo:qux                                                                       "
"  baz:qux                                                                       "
"> foo:bar                                                                       "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
