tests/snapshots/split_match__split_match_both_parts@002.snap
---
source: tests/split_match.rs
description: "input: items [\"foo:bar\", \"baz:qux\", \"foo:qux\"]\noptions: --split-match :\nafter:\n  @type \"foo:bar\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo:bar                                                                       "
"  1/3                                                                        0/0"
"> foo:bar                                                                       "
cursor: (24, 10)
