tests/snapshots/split_match__split_match_custom_delimiter-2.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo/bar                                                                       "
"  1/2                                                                        0/0"
"> foo/bar                                                                       "
cursor: (24, 10)
