tests/snapshots/split_match__split_match_custom_delimiter.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  baz/qux                                                                       "
"> foo/bar                                                                       "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
