tests/snapshots/split_match__split_match_custom_delimiter@001.snap
---
source: tests/split_match.rs
description: "input: items [\"foo/bar\", \"baz/qux\"]\noptions: --split-match /"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  baz/qux                                                                       "
"> foo/bar                                                                       "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
