tests/snapshots/split_match__split_match_custom_delimiter@002.snap
---
source: tests/split_match.rs
description: "input: items [\"foo/bar\", \"baz/qux\"]\noptions: --split-match /\nafter:\n  @type \"foo/bar\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> foo/bar                                                                       "
"  1/2                                                                        0/0"
"> foo/bar                                                                       "
cursor: (24, 10)
