tests/snapshots/split_match__split_match_delimiter_in_query_not_item.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  bazqux                                                                        "
"> foobar                                                                        "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (2, 23)
