tests/snapshots/split_match__split_match_delimiter_in_query_not_item@002.snap
---
source: tests/split_match.rs
description: "input: items [\"foobar\", \"bazqux\"]\noptions: --split-match :\nafter:\n  @type \"foo:bar\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/2                                                                        0/0"
"> foo:bar                                                                       "
cursor: (24, 10)
