tests/snapshots/split_match__split_match_empty_after-2.snap
---
source: tests/split_match.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo:qux                                                                       "
"> foo:bar                                                                       "
"  2/2                                                                        0/0"
"> foo:                                                                          "
cursor: (6, 23)
